[package]
name = "loadtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.3.24"
http = "0.2.8"
mockall = "0.11.3"
reqwest = {version="0.11.3", features=["json", "blocking"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
